look and feel updates

--- a/src/common/datetime-picker/datetime-picker.html
+++ b/src/common/datetime-picker/datetime-picker.html
@@ -1,3 +1,6 @@
+<span class="prefix">
+    <mat-icon>{{ icon }}</mat-icon>
+  </span>
 <mat-label>{{ label }}</mat-label>
 <button mat-button (click)="openPicker()">
   <mat-icon>date_range</mat-icon> {{ value | date: 'short' }}
