--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -48,7 +48,7 @@
 
     <mat-list class="contacts">
         <ng-template ngFor let-item [ngForOf]="(items | async)">
-          <mat-list-item (click)="openContactDetail(item)" [ngClass]="(meta$.checkedin === item.id) ? 'active' : ''">
+          <mat-list-item (click)="openContactDetail(item, meta$.checkedin)" [ngClass]="(meta$.checkedin === item.id) ? 'active' : ''">
             <button mat-raised-button>
               <div>
                 <h5 mat-line>{{item.associated_policy__r.insured__r.name}}</h5>
