--- a/src/pages/contacts/dialogs/check-out.html
+++ b/src/pages/contacts/dialogs/check-out.html
@@ -91,7 +91,7 @@
             <mat-label>Other</mat-label>
             <input matInput formControlName="othertext" >
           </mat-form-field>
-          <span class="error" *ngIf="otherTextError && otherTextError.length > 0">
+          <span class="error" *ngIf="otherTextError && otherTextError.length > 0" style="padding-bottom:8px">
             {{ otherTextError }}
           </span>
           <div style="text-align: center; padding-top: 16px; color:rgba(0,0,0,0.54);">
@@ -100,7 +100,7 @@
 
           
           <div class="right-actions">
-            <button mat-button color="primary" [disabled]="submitting" (click)="next()" type="button">Add to Current Invoice</button> <!-- [disabled]="!form.value.caring || !locationComplete" -->
+            <button mat-button color="primary" [disabled]="submitting" (click)="next()" type="button">Check Out</button> <!-- [disabled]="!form.value.caring || !locationComplete" -->
           </div>
       </div>
         
