--- a/src/pages/invoices/view-invoice.html
+++ b/src/pages/invoices/view-invoice.html
@@ -24,18 +24,15 @@
                  || invoice.ltc_cast_iron_pull_status__c === 'SmartCorrespond Call Error') ? 'Pending' : 
                  (invoice.ltc_cast_iron_pull_status__c === 'Ready to be Pulled' 
                  || invoice.ltc_cast_iron_pull_status__c === 'Pulled') ? 'Submitted' 
-                 : 'Not Submitted' }}</h6>
+                 : 'Pending' }}</h6>
           </mat-card-title>
         <mat-card-content>
-            <mat-table #table [dataSource]="checkins_ds">
+            <mat-table #table [dataSource]="invoice_ds">
                 <ng-container matColumnDef="date">
                   <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
                   <mat-cell *matCellDef="let item">
                     <div *ngIf="item.ltc_check_out_datetime__c !== null" class="flex">
-                      <div *ngIf="submittingInvoice">
-                        <mat-checkbox [(ngModel)]="invoiceMap[item.id]"></mat-checkbox>
-                      </div>
-                      <mat-icon>location_off</mat-icon>
+                      <mat-icon>{{ item.ltc_check_out_type__c === 'Location On' ? 'location_on' : item.ltc_check_out_type__c === 'Location Off' ? 'location_off' : 'edit' }}</mat-icon>
                       <div>
                         {{ item.ltc_check_in_datetime__c | date: 'shortDate'}}
                         <span class="subtext">{{ item.ltc_check_in_datetime__c | date: 'shortTime' }} &ndash; {{ item.checkout  | date: 'shortTime' }}</span>
@@ -59,7 +56,6 @@
                         <span class="subtext">{{ item.ltc_check_in_datetime__c | timeEst:item.checkout:true }}h &times; ${{ item.ltc_hourly_rate__c }}/h</span>
                       </span>
                       <div *ngIf="item.ltc_check_out_datetime__c === null" class="flex right">
-                        <button mat-icon-button color="white" (click)="checkout(item)"><mat-icon>stop</mat-icon></button>
                         <div *ngIf="endTime | async as $endTime">
                             {{ item.ltc_check_in_datetime__c | timeEst:$endTime }}
                         </div>
