--- a/src/pages/invoices/submit-invoice.html
+++ b/src/pages/invoices/submit-invoice.html
@@ -36,7 +36,7 @@
           <textarea matInput placeholder="Additional Information" formControlName="additionalInfo"></textarea>
         </mat-form-field>
 
-        <div><mat-checkbox formControlName="attest">By checking this box, you agree that the information being submitted is accurate to the best of your knowledge</mat-checkbox></div>
+        <div><mat-checkbox formControlName="attest">By checking this box, you agree that the information being submitted is accurate to the best of your knowledge.</mat-checkbox></div>
 
         <button mat-button>Submit Invoice</button>
       </mat-card-content>
