--- a/src/pages/invoices/submit-invoice.html
+++ b/src/pages/invoices/submit-invoice.html
@@ -3,7 +3,7 @@
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>All Invoices</ion-title>
+    <ion-title>Submit Invoice</ion-title>
   </ion-navbar>
   <jh-nav-pending></jh-nav-pending>
 </ion-header>
