--- a/src/pages/contacts/dialogs/check-out.html
+++ b/src/pages/contacts/dialogs/check-out.html
@@ -15,7 +15,7 @@
 
         <div class="floating-card" *ngIf="step === 1"> <!-- [ngClass]="locationComplete ? '' : 'hidden'" -->
 
-            <h5>{{ isUpdate ? 'Edit Timesheet' : 'Check Out' }}</h5>
+            <h5>{{ isUpdate ? 'Timesheet Details' : 'Check Out' }}</h5>
             <div class="error" *ngIf="errorMessage">{{ errorMessage }}</div>
             <datetime-picker label="Start Time" icon="schedule" disabled="{{ isUpdate ? '' : 'disabled' }}" [value]="form.value.checkin__c" (formValue)="setCheckin_dt($event)"></datetime-picker>
             
