--- a/src/pages/contacts/dialogs/delete-time.html
+++ b/src/pages/contacts/dialogs/delete-time.html
@@ -5,7 +5,7 @@
     This action cannot be undone.
 
   </mat-dialog-content>
-  <mat-dialog-actions>
+  <mat-dialog-actions style="margin-top: 16px">
     <button mat-button color="primary" type="submit">Delete</button>
     <button mat-button mat-dialog-close>Cancel</button>
   </mat-dialog-actions>
