--- a/src/pages/contacts/dialogs/check-out.html
+++ b/src/pages/contacts/dialogs/check-out.html
@@ -33,7 +33,7 @@
               </span>
               <input matInput formControlName="rate__c" >
             </mat-form-field>
-            <span class="error" *ngIf="form.value.rate__c !== defaultRate" style="color: rgba(0,0,0,0.87)!important">
+            <span class="error" *ngIf="form.value.rate__c !== defaultRate && delayReady" style="color: rgba(0,0,0,0.87)!important">
               * ${{ form.value.rate__c}} is not the standard hourly rate. ({{ defaultRate }})
             </span><br />
             <span class="error" *ngIf="rateError && rateError.length > 0">
@@ -91,7 +91,7 @@
             <mat-label>Other</mat-label>
             <input matInput formControlName="othertext" maxlength="255" >
           </mat-form-field>
-          <span class="error" *ngIf="otherTextError && otherTextError.length > 0" style="padding-bottom:8px">
+          <span class="error" *ngIf="otherTextError && otherTextError.length > 0" style="margin-top:8px; padding-bottom:8px">
             {{ otherTextError }}
           </span>
           <div style="text-align: center; padding-top: 16px; color:rgba(0,0,0,0.54);">
