no hourly rate on blank

--- a/src/pages/contacts/dialogs/check-out.html
+++ b/src/pages/contacts/dialogs/check-out.html
@@ -33,7 +33,7 @@
               </span>
               <input matInput formControlName="rate__c" >
             </mat-form-field>
-            <span class="error" *ngIf="form.value.rate__c !== defaultRate && delayReady" style="color: rgba(0,0,0,0.87)!important">
+            <span class="error" *ngIf="form.value.rate__c !== defaultRate && delayReady && form.value.rate__c !== ''" style="color: rgba(0,0,0,0.87)!important">
               * ${{ form.value.rate__c}} is not the standard hourly rate.
             </span><br />
             <span class="error" *ngIf="rateError && rateError.length > 0">
