--- a/src/pages/invoices/view-invoice.html
+++ b/src/pages/invoices/view-invoice.html
@@ -79,11 +79,12 @@
               </div>
 
               <div class="actionButtons" *ngIf="invoice.ltc_app_invoice_status__c === 'Not Submitted'">
-                <button mat-button class="left">Add New Timesheet</button>
+                <button mat-button class="left" (click)="addTimesheet()">Add New Timesheet</button>
                 <button mat-button class="right" (click)="submitInvoice()">Next</button>
               </div>
 
         </mat-card-content>
-      </mat-card>
+      </mat-card>      
+      <jh-toast></jh-toast>
     </div>
   </ion-content>
