--- a/src/pages/contacts/dialogs/check-out.html
+++ b/src/pages/contacts/dialogs/check-out.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar color="primary">
-      <ion-title>{{ isUpdate ? 'Edit Timesheet' : isManualEntry ? 'New Timesheet Details' : 'Check Out Details' }}</ion-title>
+      <ion-title>{{ isUpdate ? 'Edit Timesheet' : isManualEntry ? 'New Timesheet Details' : 'Check Out Summary' }}</ion-title>
     </ion-navbar>
     <jh-nav-pending></jh-nav-pending>
   </ion-header>
@@ -15,7 +15,7 @@
 
         <div class="floating-card" *ngIf="step === 1"> <!-- [ngClass]="locationComplete ? '' : 'hidden'" -->
 
-            <h5>{{ isUpdate ? 'Timesheet Details' : 'Check Out' }}</h5>
+            <h5>{{ isUpdate ? 'Timesheet Details' : 'Timesheet Details' }}</h5>
 
             <div class="error" *ngIf="errorMessage">{{ errorMessage }}</div>
             <datetime-picker label="Start Time" icon="schedule" disabled="{{ (isUpdate || isManualEntry) ? '' : 'disabled' }}" [value]="form.value.checkin__c" (formValue)="setCheckin_dt($event)"></datetime-picker>
@@ -99,7 +99,7 @@
               {{ otherTextError }}
             </span>
             <div style="text-align: center; padding-top: 16px; color:rgba(0,0,0,0.54);">
-              {{ isUpdate ? '' : 'After checking out this timesheet is added to the current invoice.' }} 
+              {{ isUpdate ? '' : 'After checking out, this timesheet is added to the current invoice.' }} 
             </div>
 
           
